<resources>
    <string name="app_name">Multithreading Part1</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="saved_text_will_appear_here">Saved text will appear here</string>
    <string name="save_to_file">Save to file</string>
    <string name="read_from_file">Read From File</string>
</resources>